--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,17 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
