--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,22 @@
   "main": "./src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./src/app.ts"
+    "dev": "nodemon ./src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/ejs": "^3.1.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.2",
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.2",
+    "@types/ejs": "^3.1.5",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
-    "typescript": "^5.7.2"
+    "@types/express": "^5.0.0",
+    "nodemon": "^3.1.9"
   }
 }
