--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "@types/jsonwebtoken": "^9.0.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.10.2",
     "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "nodemon": "^3.1.9",
     "prisma": "^6.0.1",
