--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon ./frontend/src/app.ts\" \"nodemon ./backend/src/index.ts\""
+    "start": "concurrently \"nodemon ./frontend/src/app.ts\" \"nodemon ./backend/src/index.ts\" \"nodemon ./management/src/app.js\""
   },
   "keywords": [],
   "author": "",
